<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".application.DetailProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/productPoster"
            android:layout_width="0dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/product_poster" />

        <RatingBar
            android:id="@+id/productRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/productPoster"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:progressTint="@android:color/holo_orange_light"
            android:layout_marginStart="16dp"
            android:numStars="5"
            android:layout_gravity="start"
            />

        <TextView
            android:id="@+id/productName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text = "ASUS TUF GAMING"
            android:layout_marginStart="16dp"
            style="@style/TextTitle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/productPoster"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/productPrice"
            style="@style/TextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/ubuntu_light"
            android:textColor="@color/cardview_dark_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productName"
            tools:text="Rp.500.000.000" />

        <TextView
            android:id="@+id/textProductDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/productPrice"
            app:layout_constraintLeft_toLeftOf="@id/productPrice"
            android:text="@string/description"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            />

        <EditText
            android:id="@+id/productDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:layout_marginEnd="16dp"
            tools:text="ini desk"
            android:gravity="start"
            style="@style/TextSubTitle"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/textProductDesc"
            app:layout_constraintLeft_toLeftOf="@id/textProductDesc"
            app:layout_constraintRight_toRightOf="parent"
            android:enabled="false"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textProductSpesification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/productDescription"
            app:layout_constraintLeft_toLeftOf="@id/productDescription"
            android:text="@string/spesification"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            />

        <EditText
            android:id="@+id/productSpesification"
            style="@style/TextSubTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="start"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@id/addToCart"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@id/textProductSpesification"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textProductSpesification"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="LabelFor"
            tools:text="ini spesificiation" />

        <Button
            android:id="@+id/addToCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/add_to_cart"
            android:drawableLeft="@drawable/ic_cart"
            />

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/back"
            android:drawableLeft="@drawable/ic_arrow_back"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>